@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: pm3d.c,v 1.75 2009/02/04 17:18:59 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: pm3d.c,v 1.76 2009/03/24 11:18:15 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - pm3d.c */
@@ -691,7 +691,8 @@ pm3d_plot(struct surface_points *this_plot, int at_which_z)
 		       pointsB[ii1].x, pointsB[ii1].y, pointsA[i1].x, pointsA[i1].y));
 
 		/* set the color */
-		set_color(gray);
+		if (pm3d.direction != PM3D_DEPTH)
+		    set_color(gray);
 #ifdef EXTENDED_COLOR_SPECS
 	      }
 #endif
@@ -974,7 +975,7 @@ pm3d_draw_one(struct surface_points *plot)
     }
 
     /* for pm3dCompress.awk */
-    if (gppsfile)
+    if (gppsfile && (pm3d.direction != PM3D_DEPTH))
 	fputs("%pm3d_map_begin\n", gppsfile);
 
     for (; where[i]; i++) {
@@ -996,7 +997,7 @@ pm3d_draw_one(struct surface_points *plot)
     }
 
     /* for pm3dCompress.awk */
-    if (gppsfile)
+    if (gppsfile && (pm3d.direction != PM3D_DEPTH))
 	fputs("%pm3d_map_end\n", gppsfile);
 }
 
